--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="/public/output.css" rel="stylesheet" />
     <title>TO DO LIST</title>
   </head>
   <body class="bg-gray-900 h-screen flex flex-col items-center justify-start ">
@@ -55,6 +54,6 @@
       </form>
       <ul id="todo-contaner" class="flex flex-col items-center"></ul>
     </section>
-    <script src="main.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
